force-app/main/default/objects/Service_Bay__c/Service_Bay__c.object-meta.xml
<CustomObject>
    <label>Service Bay</label>
    <nameField>
        <displayFormat>BN - {00000}</displayFormat>
        <label>Bay No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Bays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>