force-app/main/default/objects/Service_Bay__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Bays</relationshipLabel>
    <relationshipName>Service_Bays</relationshipName>
    <type>Lookup</type>
</CustomField>