force-app/main/default/objects/Service_Bay__c/fields/Vehicle_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Capacity__c</fullName>
    <label>Vehicle Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>